fixed map-type and crop-selection alignment

--- a/var/www/html/styles.css
+++ b/var/www/html/styles.css
@@ -22,7 +22,7 @@ body { margin: 0 auto;
     position: fixed;
     left: 0; /*adjust this to change its placement*/
     right: 0; /* Move to the right side */
-    top: 370px;
+    top: 310px; /*align from top*/
     z-index: 1000;
     background: #C1D8C3;
     width: 200px;      /* Set a wider width */
@@ -40,7 +40,7 @@ body { margin: 0 auto;
     position: fixed;
     left: 0; /*adjust this to change its placement*/
     right: 0; /* Move to the right side */
-    bottom: 76px; /*adjust this to change its placement*/
+    top: 485px; /*align from top*/
     z-index: 1000;
     background: #C1D8C3;
     width: 200px;      /* Set a wider width */
@@ -74,7 +74,7 @@ body { margin: 0 auto;
     position: fixed;
     left: 0; /*adjust this to change its placement*/
     right: 0; /* Move to the right side */
-    top: 210px;
+    top: 150px;
     z-index: 1000;
     border-radius: 0px 15px 15px 0px;
     padding: 18px;
